# compound

./: .gitattributes  .gitignore  AGENTS.md  README.md  build.gradle.kts  settings.gradle.kts  sticker.webm  test_alpha.py
.github/: release.yml
.github/workflows/: release.yml
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/mocharealm/compound/: ExampleInstrumentedTest.kt  ScreenshotTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/stickers/: 48.tgs  49.tgs  50.tgs  52.tgs  53.tgs  54.tgs  55.tgs  56.tgs  58.tgs  59.tgs  60.tgs  62.tgs  64.tgs  65.tgs  66.tgs  67.tgs  68.tgs  69.tgs  70.tgs
app/src/main/cpp/: CMakeLists.txt  build_deps.sh  vpx_player.cpp
app/src/main/java/com/mocharealm/compound/: App.kt  MainActivity.kt  ShareActivity.kt
app/src/main/res/drawable/: ic_launcher_monochrome.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mocharealm/compound/: ExampleUnitTest.kt
docs/: kmp_android_lib.md  tcsettings-architecture.md
fastlane/: Appfile  Fastfile  Screengrabfile
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ref/src/commonMain/kotlin/: AboutPage.kt  ColorPage.kt
tci18n/core/: build.gradle.kts
tci18n/processor/: build.gradle.kts
tcsettings/compose/: build.gradle.kts
tcsettings/compose/src/androidMain/: AndroidManifest.xml
tcsettings/core/: build.gradle.kts
tcsettings/core/src/main/: AndroidManifest.xml
tcsettings/processor/: build.gradle.kts
(+455 files in other folders)
